Implement GnmiSouthboundModule changes (tests)
Implement changes made in GnmiSouthboundModule
into tests.

Signed-off-by: tobias.pobocik <tobias.pobocik@pantheon.tech>